hard-gists/1361643/run.log
=== Docker Run Log for 1361643 ===
Started at: Mi 29. Okt 12:09:51 CET 2025

[2025-10-29 12:09:51] START: Running container for 1361643
[2025-10-29 12:09:52] SUCCESS: Container d6b250ab607166c64934ae3b30a66e3889c56dfacca16f61e6d55b7bcd8444d9 started for 1361643
=== Container logs for 1361643 ===
  File "/snippet.py", line 84
    print "%s changed" % prop
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1361643 ===
[2025-10-29 12:09:54] INFO: Container d6b250ab607166c64934ae3b30a66e3889c56dfacca16f61e6d55b7bcd8444d9 has stopped
